co alignment fix

--- a/sass/home/_co.sass
+++ b/sass/home/_co.sass
@@ -7,11 +7,11 @@ section .co_inner
     width: fit-content
     margin: 0 auto
     padding-bottom: 0
+    align-items: start
 
 @media screen and ( max-width: 500px )
     section .co_inner
         grid-template-columns: 1fr
-
 .co_image
     filter: grayscale(1)
 
